tests/ui/reachable/expr_match.stderr
error: unreachable statement
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!`
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: unreachable statement
   |
  ::: $DIR/expr_match.rs:7:5
   |
LL |       match () { () => return }
   |       ------------------------- any code following this `match` expression is unreachable, as all arms diverge
LL |       println!("I am dead");
   |       --------------------- in this macro invocation
   |
note: the lint level is defined here
  --> $DIR/expr_match.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable statement
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!`
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: unreachable statement
   |
  ::: $DIR/expr_match.rs:18:5
   |
LL |       match () { () if false => return, () => return }
   |       ------------------------------------------------ any code following this `match` expression is unreachable, as all arms diverge
LL |       println!("I am dead");
   |       --------------------- in this macro invocation

error: aborting due to 2 previous errors

